Доработка нескольких лабораторных работ

--- a/lab11.tex
+++ b/lab11.tex
@@ -1,11 +1,69 @@
 %!TEX program = xelatex.exe
 \documentclass[14pt,a4paper]{article}
 \input{setup.tex}
-\title{Лабораторная работа №11 \\ \textit{Расчёт коэффициентов корреляции и ковариации в MathCad}}
+\title{Лабораторная работа №11 \\ \textit{Основы регрессионного анализа. Коэффициент корреляции и ковариации}}
 \begin{document}
 \maketitle
 
+\textbf{Оборудование и принадлежности:} компьютер с установленным программным обеспечением для статистического анализа данных (Excel или MathCAD).
 
-\nocite{Plis2003, Krestlev2010,MathCADshortcuts,Ochkov2016}
-\printbibliography[title={Рекомендуемая литература}]
+\emph{Регрессионный анализ} — набор статистических методов исследования влияния одной или нескольких независимых переменных $X_{1}, X_{2}, ... , X_{p}$ на зависимую переменную $Y$. \underline{Независимые переменные} иначе называют \emph{регрессорами} или предикторами, а \underline{зависимые переменные} — \emph{критериальными} или регрессантами. Наиболее распространённый вид регрессионного анализа — линейная регрессия, когда находят линейную функцию, которая, согласно определённым математическим критериям, наиболее соответствует данным. Например, в методе наименьших квадратов вычисляется прямая, сумма квадратов между которой и данными минимальна. 
+
+\progress{}
+
+    Ознакомьтесь с понятиями корреляции и ковариации. Определите их значения для двух случайных величин X и Y, используя следующие формулы:
+
+    Ковариация: cov(X,Y) = E[(X - E[X])(Y - E[Y])]
+    Коэффициент корреляции: r(X,Y) = cov(X,Y) / (SD[X] * SD[Y])
+
+    Загрузите набор данных для анализа. Выберите две количественные переменные из набора данных, которые, по вашему мнению, могут быть связаны друг с другом (например, возраст и доход).
+
+    Рассчитайте ковариацию и коэффициент корреляции для этих двух переменных, используя программное обеспечение для статистического анализа данных. Объясните, что означают полученные значения.
+
+    Визуализируйте данные с помощью диаграммы рассеяния. Определите, есть ли между переменными линейная зависимость.
+
+    Измените данные, чтобы увидеть, как это повлияет на значения ковариации и коэффициента корреляции. Попробуйте изменить степень зависимости между переменными, добавив или удалив выбросы, изменяя диапазоны значений или меняя распределение.
+
+    Интерпретируйте полученные результаты. Обсудите, как значение коэффициента корреляции и ковариации связано с характером зависимости между переменными и как эти показатели могут использоваться для прогнозирования значений одной переменной на основе другой.
+
+    Оформите отчет по работе, включающий описание процесса анализа данных, полученные результаты и их интерпретацию.
+
+% \nocite{Plis2003, Krestlev2010,MathCADshortcuts,Ochkov2016}
+% \printbibliography[title={Рекомендуемая литература}]
+\begin{center}
+	\textbf{\Large Приложение}
+\end{center}
+\lstset{ %
+	language=[Visual]Basic,
+	keywordstyle=\color{brown},          % Стиль ключевых слов
+	breaklines=true,
+	numbers=left, 
+	backgroundcolor=\color{lightgray!5!white},
+	tabsize=4,
+	label=SqDistGen, 
+	caption={Код генератора выборок для регрессионного анализа}
+	} 
+	\renewcommand{\lstlistingname}{Листинг}
+\begin{lstlisting}
+	Dim i As Long
+	Dim a As Double
+	Dim b As Double
+	Dim c As Double
+	Dim Error As Double
+	Dim random As Double
+
+	a = 2 * (2 * Rnd - 1)
+	b = 3 * (2 * Rnd - 1)
+	c = 2 * (2 * Rnd - 1)
+	Error = 0.2
+	i = 51
+	Range("A1").Select
+	For i = 2 To i
+		ActiveCell.Value = i
+		ActiveCell.Offset(0, 1).Select
+		random = a * i * i + b * i + c
+		ActiveCell.Value = random * (1 - Error + 2 * Error * Rnd)
+		ActiveCell.Offset(1, -1).Select
+	Next i
+	\end{lstlisting}
 \end{document}
