--- a/lab5.tex
+++ b/lab5.tex
@@ -50,7 +50,7 @@
 Аппроксимировать полученную зависимость будем линейной функцией вида $f(x,a_1,a_2) = a_1x + a_2$.
 \begin{enumerate}
     \item Подставив $f(x,a_1,a_2)$ в формулу \ref{leastSquares} найдите частные производные\footnote{Более подробно о МНК можно узнать в учебнике \cite{Stepanova2014} на стр. 45}. В Excel можно и нужно производить расчёты таких коэффициентов как $\sum x_i, \sum x_i^2, \sum x_iy_i$ и т.п. \textbf{Получение частных производных и их дальнейшее упрощение нужно записывать в тетрадке!}
-    \item Решите полученную систему линейных уравнений. Запишите решение в отдельных ячейках таблицы Excel.
+    \item Решите полученную систему линейных уравнений. Запишите полученный результат ($a_1$ и $a_2$) в отдельных ячейках таблицы Excel.
 \end{enumerate}
 \section{Машинный поиск параметров}
 \begin{enumerate}
@@ -59,6 +59,12 @@
 	\includegraphics[width=.7\textwidth]{trendLine}
 	\item В открывшейся панели поставьте галочку рядом с \texttt{показывать уравнение на диаграмме}.
 	\item Сравните значения параметров $a_1$ и $a_2$ с полученными первым способом. Сделайте вывод.
+\end{enumerate}
+
+\questions{}
+\begin{enumerate}
+	\item Что представляет собой метод минимума хи-квадрат (метод Пирсона) и чем он отличается от МНК?
+	\item В чём заключается метод максимального правдоподобия?
 \end{enumerate}
 
 \printbibliography[title={Литература}]	
