--- a/lab7.tex
+++ b/lab7.tex
@@ -67,7 +67,7 @@
 
 	\item Следующий шаг~---~получить частоты попадания элементов выборки в эти интервалы. Для этого необходимо воспользоваться функцией \href{https://support.microsoft.com/ru-ru/office/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D1%8F-%D1%87%D0%B0%D1%81%D1%82%D0%BE%D1%82%D0%B0-44e3be2b-eca0-42cd-a3f7-fd9ea898fdb9}{\texttt{ЧАСТОТА(массив данных; массив верхних границ диапазонов)}}. Перед тем как задавать функцию нужно выделить диапазон ячеек, размер которого соответствует размеру массива границ. После нажатия комбинации \texttt{CTRL+SHIFT+ENTER} сформируется массив частот $O(N)$;
 	\item Постройте график зависимости массива частот $O$ от массива границ $N$;
-	\item Теперь нужно получить столбец $E(N)$. Перед этим нужно посчитать столбец вероятностей  ($P_i$) для каждого $N$ с помощью функции \texttt{НОРМ.РАСП} с пустым последним параметром. Остаётся открытым вопрос, откуда брать среднее ($\bar{N}$) и $\sigma$? Эти параметры можно подобрать вручную построив два графика в одних координатах $E(N)$ и $O(N)$, и добившись их наилучшего соответствия;
+	\item Теперь нужно получить столбец $E(N)$. Перед этим нужно посчитать столбец вероятностей  ($P_i$) для каждого $N$ (значения из массива границ) с помощью функции \texttt{НОРМ.РАСП} с пустым последним параметром. Остаётся открытым вопрос, откуда брать среднее ($\bar{N}$) и $\sigma$? Эти параметры можно подобрать вручную построив два графика в одних координатах $E(N)$ и $O(N)$, и добившись их наилучшего соответствия;
 	\item Чтобы найти ожидаемые (теоретические) частоты $E_i$ нужно умножить соответствующие вероятности ($P_i$) на объём выборки, то есть на 500. Ож. частоты $E_i$ должны быть целыми ненулевыми числами, поэтому стоит использовать функцию \texttt{ОКРУГЛВВЕРХ};
 \end{itemize}
 \section{Оценка критерия Пирсона}
