Добавлен рандомайзер к генераторам выборок

--- a/lab7.tex
+++ b/lab7.tex
@@ -83,7 +83,7 @@
 \begin{enumerate}
 	\item Сформулируйте нулевую гипотезу $H_0$. Назовите условие, при котором можно отклонить нулевую гипотезу.
 	% \item Вывести дисперсию распределение Пуассона (D[N]).
-	\item Можно ли в программе Excel сгенерировать выборку имеющую нормальное распределение? Если можно, то как это можно реализовать? %=НОРМОБР(СЛЧИС();сред.;стоткл)
+	\item Можно ли в программе Excel сгенерировать выборку имеющую нормальное распределение? Если можно, то как это реализовать? %=НОРМОБР(СЛЧИС();сред.;стоткл)
 	\item Что такое p-value (p-значение)? Чему численно равно это значение?
 	\item В каких случаях используется функция \texttt{ХИ2.ОБР}? Что она позволяет оценить
 \end{enumerate}
@@ -102,6 +102,7 @@
 	} 
 	\renewcommand{\lstlistingname}{Листинг}
 \begin{lstlisting}
+	Randomize
 	Dim i As Long
 	Dim mean As Integer
 	Dim sigma As Integer
