Обновлена инструкция по установке Mathcad

--- a/lab5.tex
+++ b/lab5.tex
@@ -64,7 +64,7 @@
 \questions{}
 \begin{enumerate}
 	\item Что представляет собой метод минимума хи-квадрат (метод Пирсона) и чем он отличается от МНК?
-	\item В чём заключается метод максимального правдоподобия?
+	\item В чём заключается метод максимального правдоподобия? % Метод заключается в оценивании неизвестного параметра путём максимизации функции правдоподобия
 \end{enumerate}
 
 \printbibliography[title={Литература}]	
