--- a/lab6.tex
+++ b/lab6.tex
@@ -231,7 +231,7 @@ x\textsubscript{2},\ldots,x\textsubscript{n} --} неизвестные вели
         \draw(2.2,0) to[battery1, v<=$\varepsilon_2$, l_=$r_2$,*-,invert] (2.2,1.5) to[generic, l=$R_2$, -*] (2.2,4);
     \end{circuitikz}
 \end{wrapfigure}
-Определить величину токов во всех участках цепи и мощность, развиваемую источниками ЭДС, если $\varepsilon_1=6$ В, $\varepsilon_2=10$ В, $E_3=20$ В, $r_1=0,2$ Ом, $r_2=0,2$ Ом, $r_3=0,4$ Ом, $R_1=19,8$ Ом, $R_2=45,8$ Ом, $R_3=100$ Ом, $R_4=99,6$ Ом. 
+Определить величину токов во всех участках цепи и мощность, развиваемую источниками ЭДС, если $\varepsilon_1=6$ В, $\varepsilon_2=10$ В, $\varepsilon_3=20$ В, $r_1=0,2$ Ом, $r_2=0,2$ Ом, $r_3=0,4$ Ом, $R_1=19,8$ Ом, $R_2=45,8$ Ом, $R_3=100$ Ом, $R_4=99,6$ Ом. 
 % \begin{enumerate}
 %     \item 
 % \end{enumerate} 
