--- a/lab5.1.tex
+++ b/lab5.1.tex
@@ -31,7 +31,7 @@
     \item Дайте названия осей в формате: \verb|{физ. вел.}, {ед. изм.}|, например x -- сила тока в амперах, а y -- мощность в ваттах, или можете придумать названия осей сами, вспомнив другие квадратичные зависимости в физике. Далее расположите названия осей по центру числовой шкалы. Параметры шрифта по возможности должны быть такими же, как и в предполагаемом документе, где будет находится график: кегль -- 14 пт, семейство -- Roman);
     \item Проведите линейную регрессию для точек выборки;
     \item Задайте относительную погрешность 5\% для оси Y;
-    \item Оформите легенду, добавив название "Экспериментальные точки" для точек выборки, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с правильно округлёнными погрешностями (можно получить из консоли, информация в которой появится после добавления линейной регрессии);
+    \item Оформите легенду, добавив название <<Экспериментальные точки>> для точек выборки, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с правильно округлёнными погрешностями (можно получить из консоли, информация в которой появится после добавления линейной регрессии);
     \item Цветовую палитру можете выбрать любую, главное чтобы цвета хорошо контрастировали с фоном;
     \item Экспортировать рисунок в векторном формате, например в \verb|.svg|.
 \end{enumerate}
@@ -53,6 +53,6 @@
 \begin{enumerate}
     \item Скачайте по \href{https://mega.nz/folder/4R9xHYgT#LjgmYjooWK4WEsR4ylHn_w}{ссылке} программу;
     \item Установить программу в режиме OriginPro Trial следуя правилам установщика; 
-    \item Заменить файлами из папки \path{Crack\Fix3} (\verb=ok.dll= и \verb=ou.dll=) соответствующие файлы в папке с установленной программой (стандартный путь: \path{c:\Program Files\OriginLab\Origin2021\}, который у Вас может отличаться).
+    \item Заменить файлами из папки \path{Crack\Fix3} (\verb=ok.dll= и \verb=ou.dll=) соответствующие файлы в папке с установленной программой (стандартный путь: \path{c:\Program Files\OriginLab\Origin2021\}, который у вас может отличаться).
 \end{enumerate}
 \end{document}
