--- a/method.tex
+++ b/method.tex
@@ -5,4 +5,4 @@
 исследований полученных в ходе выполнения лабораторных работ по курсу <<механика>> (РЕКОМЕНДУЕТСЯ)
 % , при отсутствии необходимого материала данные предоставляются преподавателем по запросу студента
 . 
-Работа выполняется в программе \href{https://mega.nz/folder/0EUyAKgC#4X5RubnYkoUUJYhwDDpKbg}{Microsoft Office Excel} или \href{https://www.libreoffice.org/download/download-libreoffice/?type=win-x86_64&version=7.4.0&lang=ru-RU}{LibreOffice Calc}. Результаты выполнения задания оформляются в файле с расширением ".xlsx". 
+Работа выполняется в программе \href{https://mega.nz/folder/0EUyAKgC#4X5RubnYkoUUJYhwDDpKbg}{Microsoft Office Excel} или \href{https://www.libreoffice.org/download/download-libreoffice/?type=win-x86_64&version=7.4.0&lang=ru-RU}{LibreOffice Calc}. Результаты выполнения задания оформляются в файле с расширением ".xlsx". В названии файла укажите свою фамилию с инициалами, курс и группу.
