--- a/lab3.tex
+++ b/lab3.tex
@@ -15,8 +15,8 @@
     \item Сгенерировать массив из 5 целых случайных чисел от 1 до 30, расположить его в ряд таблицы Excel;
     \item Сгенерировать ещё 4 ряда таких же массивов до квадратной матрицы;
     \item Найти определитель этой матрицы;
-    \item Произвести транспонировку этой матрицы (нужно выделить матрицу, скопировать её, в параметрах вставки выбрать <<транспонировать>>);
-    \item Найти обратную матрицу (1. выделить диапазон 5 х 5, который не пересекается с исходным диапазоном; 2. В строке формул ввести формулу \texttt{МОБР(диапазон исх. матрицы)} и нажать комбинацию клавиш \texttt{CTRL+SHIFT+ENTER});
+    \item Произвести транспонировку этой матрицы (1. выделить диапазон 5 х 5, который не пересекается с исходным диапазоном; 2. В строке формул ввести формулу \texttt{ТРАНСП(A1:E5)} и нажать комбинацию клавиш \texttt{CTRL+SHIFT+ENTER}. Также можно выделить матрицу, скопировать её, в параметрах вставки выбрать <<транспонировать>>, но в будущем при генерации новых элементов исходной матрицы они не будут соответствовать транспонированной);
+    \item Найти обратную матрицу c помощью функции \texttt{МОБР(диапазон исх. матрицы)} по такому же принципу, как и в пункте выше;
     \item Проверить результат перемножив исходную и обратную матрицы и отобразив отдельно результат.
 \end{enumerate}
 \section{}
