--- a/lab5.1.tex
+++ b/lab5.1.tex
@@ -27,11 +27,11 @@
 % \end{enumerate}   
 \section{Построение графиков}
 \begin{enumerate}
-    \item Используя данные из предыдущего предыдущей лабораторной работы (№5) составьте график. 
+    \item Используя данные из предыдущей лабораторной работы (№5) составьте график. 
     \item Дайте названия осей в формате: \verb|{физ. вел.}, {ед. изм.}|, например x -- сила тока в амперах, а y -- мощность в ваттах, или можете придумать названия осей сами, вспомнив другие квадратичные зависимости в физике. Далее расположите названия осей по центру числовой шкалы. Параметры шрифта по возможности должны быть такими же, как и в предполагаемом документе, где будет находится график: кегль -- 14 пт, семейство -- Roman);
     \item Проведите линейную регрессию для точек выборки;
     \item Задайте относительную погрешность 5\% для оси Y;
-    \item Оформите легенду, добавив название <<Экспериментальные точки>> для точек выборки, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с правильно округлёнными погрешностями (можно получить из консоли, информация в которой появится после добавления линейной регрессии);
+    \item Оформите легенду, добавив название <<Экспериментальные точки>> для точек выборки, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с правильно округлёнными погрешностями (можно получить из консоли, где появляется информация после добавления линейной регрессии);
     \item Цветовую палитру можете выбрать любую, главное чтобы цвета хорошо контрастировали с фоном;
     \item Экспортировать рисунок в векторном формате, например в \verb|.svg|.
 \end{enumerate}
